# pico-ap-configure

./: .gitignore  CMakeLists.txt  README.md  ap_post_handler.c  ap_post_handler.h  cdll.c  cgi.c  cgi.h  envrc  find_local_ssid.c  flash_io.c  json_handler.c  lwipopts.h  makefsdata.py  mdns_example.c  picow_access_point.c  picow_access_point.c.broken  picow_tcp_client.c  picow_tcp_json.c  picow_tcp_server.c  picow_web.c  post_example.c  post_handler.c  python_json_tcp_client.py  python_json_tcp_server.py  python_test_tcp_client.py  python_test_tcp_server.py  relay_control.c  ring_buffer.c  sample.json  ssi.c  ssi.h  tcp_client_test1.c  tcp_json.c  tcp_server_test1.c  tcp_test1.c
html_files/: config.shtml  index.shtml  ip_config.js  sprajax.js
include/: cdll.h  find_local_ssid.h  flash_io.h  json_handler.h  picow_tcp.h  picow_tcp_json.h  post_handler.h  relay_control.h  ring_buffer.h  ssi.h  tcp_json.h
